i've finished the about and services section

--- a/index.html
+++ b/index.html
@@ -71,53 +71,126 @@
                     <img src="" alt="icon">
                     <h3>User Experience Design</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Aliquid eos saepe
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
                 </div>
                 <div class="serviceItem">
                     <img src="" alt="icon">
                     <h3>User Experience Design</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Aliquid eos saepe
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
                 </div>
                 <div class="serviceItem">
                     <img src="" alt="icon">
                     <h3>User Experience Design</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Aliquid eos saepe
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
                 </div>
                 <div class="serviceItem">
                     <img src="" alt="icon">
                     <h3>User Experience Design</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Aliquid eos saepe
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
                 </div>
                 <div class="serviceItem">
                     <img src="" alt="icon">
                     <h3>User Experience Design</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Aliquid eos saepe
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
                 </div>
                 <div class="serviceItem">
                     <img src="" alt="icon">
                     <h3>User Experience Design</h3>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Aliquid eos saepe
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     </p>
                 </div>
             </div>
         </section>
-        <section class="portifolio container" id="portifolio"></section>
+        <section class="portifolio container" id="portifolio">
+            <div class="portMain">
+                <h2 class="title"><span>experiences </span>with passion, precision and purpose</h2>
+                <div>
+                    <p class="text">
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                        A dolores vero ut consectetur illum. Odit provident similique 
+                        sed cupiditate dolorem, corporis, ex, soluta praesentium 
+                        voluptatem velit nam autem impedit itaque.
+                    </p>
+                    <button class="btnPrimary">let's talk <span>-></span></button>
+                </div>
+            </div>
+            <ul class="portList">
+                <li class="portItem">
+                    <div class="project">
+                        <h3><span>creative minds, </span>New York City, USA</h3>
+                        <p>-  February 2022 - Present</p>
+                    </div>
+                    <div class="description">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur 
+                            adipisicing elit.
+                        </p>
+                        <button class="btnSecondary">UIUX</button>
+                        <button class="btnSecondary">Branding</button>
+
+                    </div>
+                    <img src="./images/img04.jpg" alt="">
+                </li>
+                <li class="portItem">
+                    <div class="project">
+                        <h3><span>Innovative Design Inc, </span>USA</h3>
+                        <p>-  January 2020 - February 2022</p>
+                    </div>
+                    <div class="description">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur 
+                            adipisicing elit.
+                        </p>
+                        <button class="btnSecondary">UIUX</button>
+                        <button class="btnSecondary">Branding</button>
+
+                    </div>
+                    <img src="" alt="">
+                </li>
+                <li class="portItem">
+                    <div class="project">
+                        <h3><span>Visionary Creations Ltd, </span>London, UK</h3>
+                        <p>-  January 2020 - September 2021</p>
+                    </div>
+                    <div class="description">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur 
+                            adipisicing elit.
+                        </p>
+                        <button class="btnSecondary">UIUX</button>
+                        <button class="btnSecondary">Branding</button>
+
+                    </div>
+                    <img src="" alt="">
+                </li>
+                <li class="portItem">
+                    <div class="project">
+                        <h3><span>FutureTech, </span>Germany</h3>
+                        <p>-  January 2020 - February 2022</p>
+                    </div>
+                    <div class="description">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur 
+                            adipisicing elit.
+                        </p>
+                        <button class="btnSecondary">UIUX</button>
+                        <button class="btnSecondary">Branding</button>
+
+                    </div>
+                    <img src="" alt="">
+                </li>
+            </ul>
+        </section>
         <section class="resource container" id="resource"></section>
     </article>
     <footer class="footer">
@@ -193,7 +266,7 @@
             </span>
         </div>
     </footer>
-    <script type="module" src="./scripts/main.js"></script>
+    <script src="./scripts/main.js"></script>
     <script src="./scripts/mobile.js"></script>
 </body>
 </html>
