finished portifolio, resource, services

--- a/index.html
+++ b/index.html
@@ -191,7 +191,63 @@
                 </li>
             </ul>
         </section>
-        <section class="resource container" id="resource"></section>
+        <section class="resource container" id="resource">
+            <h2 class="title">My Work <span>Experience</span></h2>
+            <p class="text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Distinctio odio quis, ad ea ut est eius consectetur fugit 
+                aperiam autem ab labore quasi tempore!
+            </p>
+            <ul class="list">
+                <li class="listItem">
+                    <span class="itemNumber">01</span>
+                    <div class="itemInfo">
+                        <h3 class="itemTitle">Creative Minds, New York</h3>
+                        <span class="itemDate">- February 2022 - Present</span>
+                    </div>
+                    <span class="itemArrow">-></span>
+                </li>
+                <li class="listItem">
+                    <span class="itemNumber">02</span>
+                    <div class="itemInfo">
+                        <h3 class="itemTitle">Innovative Designs Inc, USA</h3>
+                        <span class="itemDate">- January 2020 - February 2022</span>
+                    </div>
+                    <span class="itemArrow">-></span>
+                </li>
+                <li class="listItem">
+                    <span class="itemNumber">03</span>
+                    <div class="itemInfo">
+                        <h3 class="itemTitle">Creative Minds, New York</h3>
+                        <span class="itemDate">- February 2022 - Present</span>
+                    </div>
+                    <span class="itemArrow">-></span>
+                </li>
+                <li class="listItem">
+                    <span class="itemNumber">04</span>
+                    <div class="itemInfo">
+                        <h3 class="itemTitle">Creative Minds, New York</h3>
+                        <span class="itemDate">- February 2022 - Present</span>
+                    </div>
+                    <span class="itemArrow">-></span>
+                </li>
+            </ul>
+            <div class="latest">
+                <h2 class="title">Latest <span>blog post</span></h2>
+                <div>
+                    <div class="text">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Distinctio odio quis.
+                    </div>
+                    <button class="btnPrimary">See More <span>-></span></button>
+                </div>
+                <div class="images">
+                    <img src="./images/img04.jpg" alt="">
+                    <img src="./images/img05.jpg" alt="">
+                    <img src="./images/img06.jpg" alt="">
+                </div>
+            </div>
+        </section>
     </article>
     <footer class="footer">
         <div class="notify">
